--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node script.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "firebase": "^9.15.0",
-    "firebase-tools": "^11.19.0"
+    "express": "^4.18.2"
   }
 }
