--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "axiom-website",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "deploy": "node server.js && gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
