--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "firebase-tools": "^11.19.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
